# geg-inspector

./: .dockerignore  .gitignore  README-DOCKER.md  README.md  backend_entry.py  build_backend.py  dev.bat  dev.sh  docker-compose.mirror.cn.yml  docker-compose.yml  rebuild-mirror.bat  rebuild.bat  requirements.txt  start-mirror.bat  start-mirror.sh  start.bat  start.sh  stop.bat  stop.sh  version.txt
app/: main_window.py  navigation.py  resource_path.py  router.py  runtime_paths.py
app/application/: __init__.py  analysis_use_cases.py  bootstrap.py  dataset_use_cases.py  export_use_cases.py  import_use_cases.py  task_store.py
app/pages/: integration_select_page.py  upload_page.py
app/widgets/: bank_filter_dialog.py  db_browser_dialog.py  file_list_widget.py
backend/: Dockerfile  __init__.py  entry.py  main.py
backend/app/: runtime_paths.py
backend/tests/: __init__.py  test_auth.py  (+14 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.ts
mock-data/: 01_enterprise_工商主体.xlsx  02_commercial_商务网询价.xlsx  03_bank_多人流水_建设银行.xlsx  04_wechat_多人转账.xlsx  05_telecom_多人话单.xlsx  README.md
scripts/: build_backend.py  build_desktop.ps1  build_docker_package.ps1  build_docker_package.sh  ensure_cargo_in_path.ps1  generate_mock_data.py  import_mock_data.py  rust_path_helpers.ps1  setup_rust_on_d.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
tests/: test_application_use_cases.py  test_bank_analysis_modules.py  test_bank_query_and_mapping.py  test_runtime_paths.py
(+149 files in other folders)
