[package]
name = "datafusionx-shell"
version = "0.1.0"
description = "DataFusionX offline desktop shell"
authors = ["DataFusionX"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "process-exit", "process-relaunch", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
